--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <version>2.0.3</version> <!-- Or the latest version -->
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
 
     </dependencies>
 
