--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 socket-server.host=192.168.29.204
 socket-server.port=8085
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rohithv1396@gmail.com
+spring.mail.password=yooxvufvgmscttwf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
